--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-7 text-center text-lg-left">
-          <h1 class="mb-4 ityped text-red"></h1>
+          <div class="" style="height:150px;"><span class="text-red ityped"></span></div>
           <h1 class="mb-4">
             For Crypto <span class="">Businesses</span> Made Easy
           </h1>
@@ -895,11 +895,6 @@
         </div>
         <div class="col-lg-8 text-lg-left text-center">
           <h2 class="mb-3">Still Didn&rsquo;t Find Your Answer?</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-            <br />
-            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          </p>
           <a href="contact.html" class="btn btn-primary">Submit a ticket</a>
         </div>
       </div>
