--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
               <p class="card-text mb-2">kodex, 47/1 , First floor, Bhawanipur Colony, Indore, Madhya Pradesh, 452001
               </p>
               <hr>
-              <p class="small">Email info@ment.tech</p>
+              <p class="small">Email vckodex@gmail.com</p>
             </div>
           </div>
         </div>
@@ -107,7 +107,7 @@
               <h6 class="card-title">kodex PVT. LTD.</h6>
               <p class="card-text mb-2">5857 Owens Ave Suite 300 Carlsbad, CA 92008</p>
               <hr>
-              <p class="small">Email info@ment.tech</p>
+              <p class="small">Email vckodex@gmail.com</p>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
               <h6 class="card-title">kodex CONSULTING</h6>
               <p class="card-text mb-2">One Avenue, 23 Finsbury Circus, London, England, EC2M 7EA</p>
               <hr>
-              <p class="small">Email info@ment.tech</p>
+              <p class="small">Email vckodex@gmail.com</p>
             </div>
           </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -194,7 +194,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
