--- a/cryptocurrency.html
+++ b/cryptocurrency.html
@@ -136,7 +136,7 @@
                   placeholder="Your Text here ..."></textarea>
               </div>
               <button type="submit" class="btn btn-primary col-12 my-3">Submit</button>
-              <p class="small my-3">Ment Tech uses the information you provide to us to contact you about our relevant
+              <p class="small my-3">KODEX uses the information you provide to us to contact you about our relevant
                 content, products and services. For more information, check out our Privacy Policy.</p>
             </form>
           </div>
@@ -266,7 +266,7 @@
                 <ul class="row nav nav-pills text-center justify-content-center" id="myTab" role="tablist">
                   <li class="col-lg-3 nav-item"><a class="nav-link active border border-light" id="home-tab"
                       data-toggle="tab" href="#home2" role="tab" aria-controls="home" aria-selected="true">Adopting the
-                      Ment Tech Underlying Technology</a>
+                      KODEX Underlying Technology</a>
                   </li>
                   <li class="col-lg-3 nav-item"><a class="nav-link border border-light" id="profile-tab"
                       data-toggle="tab" href="#profile2" role="tab" aria-controls="profile" aria-selected="false">First
@@ -283,8 +283,8 @@
                 <div class="col-lg-12 tab-pane fade show active" id="home2" role="tabpanel" aria-labelledby="home-tab">
                   <div class="row">
                     <div class="col-lg-6 my-auto">
-                      <h6 class="text-start">Adopting Ment Tech Underlying Technology</h6>
-                      <p class="text-start">Cryptocurrency Liquidity Solution adopts the Ment Tech underlying
+                      <h6 class="text-start">Adopting KODEX Underlying Technology</h6>
+                      <p class="text-start">Cryptocurrency Liquidity Solution adopts the KODEX underlying
                         technology, embraces over 100 technical talents from enterprises, and has been tested by over
                         500 global clients.</p>
                     </div>
@@ -310,7 +310,7 @@
                   <div class="row">
                     <div class="col-lg-6 my-auto">
                       <h6 class="text-start">Professional Financial-level Security Architecture</h6>
-                      <p class="text-start">It relies on Ment Tech security services to ensure system security; In
+                      <p class="text-start">It relies on KODEX security services to ensure system security; In
                         addition, Cryptocurrency Liquidity Solution adopts professional investment and trading network
                         architecture of forex, securities and futures, and a variety of exception handling mechanisms to
                         ensure security and stability of liquidity services.</p>
@@ -393,7 +393,7 @@
                 Crypto CFD Liquidity
               </h3>
               <p class="card-text">
-                CFDs are a convenient way of trading cryptocurrencies. Ment Tech offers an incomparable Crypto CFD
+                CFDs are a convenient way of trading cryptocurrencies. KODEX offers an incomparable Crypto CFD
                 solution aggregating cryptocurrency exchanges, non-bank liquidity providers, cryptocurrency brokers, OTC
                 orders of institutional clients, hedge funds and thousands of client-broker orders to create the deepest
                 liquidity pool in the industry to meet all our client’s needs.
@@ -506,7 +506,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -519,7 +519,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
