--- a/staking-lending.html
+++ b/staking-lending.html
@@ -136,7 +136,7 @@
                   placeholder="Your Text here ..."></textarea>
               </div>
               <button type="submit" class="btn btn-primary col-12 my-3">Submit</button>
-              <p class="small my-3">Ment Tech uses the information you provide to us to contact you about our relevant
+              <p class="small my-3">KODEX uses the information you provide to us to contact you about our relevant
                 content, products and services. For more information, check out our Privacy Policy.</p>
             </form>
           </div>
@@ -155,7 +155,7 @@
         <div class="col-lg-12">
           <p class="my-4">
             Leading exchanges, custodians and apps rely on Ment’s secure, reliable and non-custodial infrastructure to
-            earn rewards for their customers. Ment Tech supports the broadest range of crypto assets with a single
+            earn rewards for their customers. KODEX supports the broadest range of crypto assets with a single
             integration
           </p>
           <p class="mb-4">
@@ -169,7 +169,7 @@
           </p>
           <p>
             Programmatic access to all staking, defi lending and reporting functionality makes integrations easy and
-            seamless. We support a wide variety of node types, custody setups and even custom versions of Ment Tech defi
+            seamless. We support a wide variety of node types, custody setups and even custom versions of KODEX defi
             lending service.
           </p>
         </div>
@@ -342,7 +342,7 @@
                 Broadest Asset Coverage
               </h3>
               <p class="card-text">
-                With support for 100+ assets and 50+ more coming soon, Ment Tech delivers rewards across the broadest range of crypto assets.
+                With support for 100+ assets and 50+ more coming soon, KODEX delivers rewards across the broadest range of crypto assets.
               </p>
             </div>
           </div>
@@ -479,7 +479,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -492,7 +492,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
