--- a/trading-system.html
+++ b/trading-system.html
@@ -136,7 +136,7 @@
                   placeholder="Your Text here ..."></textarea>
               </div>
               <button type="submit" class="btn btn-primary col-12 my-3">Submit</button>
-              <p class="small my-3">Ment Tech uses the information you provide to us to contact you about our relevant
+              <p class="small my-3">KODEX uses the information you provide to us to contact you about our relevant
                 content, products and services. For more information, check out our Privacy Policy.</p>
             </form>
           </div>
@@ -594,7 +594,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -607,7 +607,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
