--- a/crypto-exchange.html
+++ b/crypto-exchange.html
@@ -72,7 +72,7 @@
                 Turnkey Solution
               </h1>
               <p class="mb-4">
-                Ment Tech is a world-leading white label exchange solution provider. This page gives a detailed
+                KODEX is a world-leading white label exchange solution provider. This page gives a detailed
                 introduction of Product portfolios, risk control system, applicable teams and deployment process.
               </p>
             </div>
@@ -105,7 +105,7 @@
                   placeholder="Your Text here ..."></textarea>
               </div>
               <button type="submit" class="btn btn-primary col-12 my-3">Submit</button>
-              <p class="small my-3">Ment Tech uses the information you provide to us to contact you about our relevant
+              <p class="small my-3">KODEX uses the information you provide to us to contact you about our relevant
                 content, products and services. For more information, check out our Privacy Policy.</p>
             </form>
           </div>
@@ -150,7 +150,7 @@
                   <div class="row">
                     <div class="col-lg-6 my-auto">
                       <h6 class="text-start">Clear Business Model</h6>
-                      <p class="text-start">Ment Tech adheres to serving B-end customers as its core and focuses on
+                      <p class="text-start">KODEX adheres to serving B-end customers as its core and focuses on
                         providing blockchain technology services to global customers. It does not open itself and will
                         not open exchanges in the future.</p>
                     </div>
@@ -456,7 +456,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -469,7 +469,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
