--- a/mining-pool.html
+++ b/mining-pool.html
@@ -136,7 +136,7 @@
                   placeholder="Your Text here ..."></textarea>
               </div>
               <button type="submit" class="btn btn-primary col-12 my-3">Submit</button>
-              <p class="small my-3">Ment Tech uses the information you provide to us to contact you about our relevant
+              <p class="small my-3">KODEX uses the information you provide to us to contact you about our relevant
                 content, products and services. For more information, check out our Privacy Policy.</p>
             </form>
           </div>
@@ -155,7 +155,7 @@
           <p class="my-4">
             Everyone can start mining without the need for deep technical knowledge about cryptocurrency mining. It is
             tailored for ease of use and features a very simple interface. When running, Miner is connected to exchange
-            platform and Ment Tech open hashing power marketplace.
+            platform and KODEX open hashing power marketplace.
           </p>
           <p class="mb-4">
             Miners select the algorithm and the speed while r miners mining the software fulfil that order by mining
@@ -512,7 +512,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -525,7 +525,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
