--- a/team.html
+++ b/team.html
@@ -545,7 +545,7 @@
             <div class="col-lg-4 text-lg-left text-center">
               <h5 class="text-white">Our Address</h5>
               <p class="mt-lg-5 mt-2">
-                Ment Tech, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
+                KODEX, 47/1 , First floor,<br> Bhawanipur Colony, Indore, <br>Madhya Pradesh, 452001
               </p>
             </div>
             <div class="col-lg-4 my-5 my-lg-0 text-center">
@@ -558,7 +558,7 @@
             </div>
             <div class="col-lg-4 text-lg-right text-center">
               <h5 class="text-white">Email Contact</h5>
-              <p class="mt-lg-5 mt-2">info@ment.tech <br>
+              <p class="mt-lg-5 mt-2">vckodex@gmail.com <br>
                 Mon - Fri, 11:00AM - 08:00PM</p>
             </div>
           </div>
